[gd_scene load_steps=4 format=3 uid="uid://cebisjuser8u0"]

[ext_resource type="Script" path="res://src/scenes/main/character.gd" id="1_10xxw"]
[ext_resource type="Texture2D" uid="uid://c40jmc5vku17h" path="res://assets/mel back.png" id="2_bplfg"]
[ext_resource type="Texture2D" uid="uid://n6njsojrnv2l" path="res://assets/mel front.png" id="3_no06w"]

[node name="Character" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_10xxw")

[node name="CharacterBack" type="TextureRect" parent="."]
unique_name_in_owner = true
z_index = -1
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_bplfg")

[node name="CupSpot" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CharacterFront" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 1000.0
offset_bottom = 1000.0
texture = ExtResource("3_no06w")
